Bug 486254 - Composer signs messages by default even if turned off in settings
Summary: Composer signs messages by default even if turned off in settings
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 6.0.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-28 15:45 UTC by Grósz Dániel
Modified: 2024-10-17 07:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2024-04-28 15:45:02 UTC
SUMMARY
Since the upgrade to KMail 6.x, when writing an e-mail the Sign Message option is turned on, even though it's disabled in the settings.

STEPS TO REPRODUCE
0. Perhaps it depends on having configured GPG keys somewhere at some point in the past. I think I did so at some point, but never really bothered to figure out how e-mail signing works.
1. Make sure Configure / Security / Encryption / Security defaults / Sign all messages is unchecked.
2. Click New Message, or reply to a message.

OBSERVED RESULT
In the composer window, the Sign Message option is turned on. If left on, when sending, it asks for a password.

EXPECTED RESULT
Sign Message option is turned off (and can be turned on manually).

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240426
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-1-default (64-bit)
Graphics Platform: X11
Comment 1 Jonathan Marten 2024-09-13 08:31:07 UTC
Confirmed with current KMail Git master (7f3171e8).

Settings - Configure KMail - Security - Encryption has the first four check boxes ("Encrypt draft messages", "Encrypt sent messages", "Sign all messages" and "Encrypt all messages when possible") all turned off.

Accounts - Identities - default identity - Modify - Cryptography has a PGP key selected but "Enable Autocrypt" and "Override global settings for security defaults" turned off.

Starting to compose a new mail still starts with the "Sign Message" tool button selected and the "Message will be signed" banner shown.
Comment 2 Bug Janitor Service 2024-09-23 10:01:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kmail/-/merge_requests/142
Comment 3 Jonathan Marten 2024-10-17 07:45:13 UTC
Git commit b43f1730955606ea4222d7894fe1495b77937ad8 by Jonathan Marten.
Committed on 17/10/2024 at 07:32.
Pushed by marten into branch 'master'.

Set the message signing state correctly when the composer is opened

Need to use our own internal pgpAutoSign() in changeCryptoAction(),
because that takes account of both the global defaults and the
identity-specific override.

M  +4    -1    src/editor/kmcomposerwin.cpp

https://invent.kde.org/pim/kmail/-/commit/b43f1730955606ea4222d7894fe1495b77937ad8