Set the message signing state correctly when the composer is opened

Need to use our own internal pgpAutoSign() in changeCryptoAction(),
because that takes account of both the global defaults and the
identity-specific override.

BUG:486254